crates/oxidoc/tests/snapshots/golden_writer__html__common__div-admonition.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<div class="note">
<p>be careful here</p>
</div>
