crates/oxidoc/tests/snapshots/golden_writer__html__common__div.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<div id="d" class="note">
<p>body paragraph</p>
</div>
