crates/oxidoc/tests/snapshots/golden_writer__html__common__emphasis-family.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<p><em>emph</em> <strong>strong</strong> <del>struck</del>
super<sup>2</sup> sub<sub>3</sub></p>
