crates/oxidoc/tests/snapshots/golden_writer__html__common__emphasis-with-link.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<p><em>see <a href="http://example.com">text</a> here</em></p>
