crates/oxidoc/tests/snapshots/golden_writer__html__common__escape-flanking.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<p>a * b ` c | d and trailing_ref_</p>
