crates/oxidoc/tests/snapshots/golden_writer__html__common__escape-specials.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<p>a &amp; b % c # d _ e $ f { g } h ^ i ~ j</p>
