crates/oxidoc/tests/snapshots/golden_writer__html__common__hard-break.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<p>first line<br />
second line</p>
