crates/oxidoc/tests/snapshots/golden_writer__html__common__header-attr.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<h1 class="cls" data-key="val" id="anchor">Titled</h1>
